added a picture and some additional tweaks

--- a/scott/HW2/Five Little Peppers At School/index.html
+++ b/scott/HW2/Five Little Peppers At School/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-<h1>Table Of Contents</h1>
+<h1>Five Little Peppers At School</h1>
+
+<img class="cover-image" src="CoverImage.jpg" title="Look at those little kids!" alt="Five Little Peppers At School">
+
+<h2>Table Of Contents</h2>
 
 <ul class="chapters">
 	<li><a class="Chapter1" href="chapter-one.html">Chapter One</a></li>
