added some color and some images from source book

--- a/scott/HW2/Five Little Peppers At School/index.html
+++ b/scott/HW2/Five Little Peppers At School/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 
-<h1>Five Little Peppers At School</h1>
 
-<img class="cover-image" src="CoverImage.jpg" title="Look at those little kids!" alt="Five Little Peppers At School">
+<h1 class="book-title">Five Little Peppers At School by Margaret Sidney</h1>
+
+<p>
+<img class="cover-image" src="CoverImage.jpg" title="Look at those little kids!" alt="Five Little Peppers At School" align="left">
+</p>
 
 <h2>Table Of Contents</h2>
 
