Added First Chapter and Font Style

--- a/chandler/Grimm/titlepage.html
+++ b/chandler/Grimm/titlepage.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="../style.css">
 </head>
 	<body>	
-		<h1>Title Page</h1>
-		<ul id="nav">
+		<h1 class="main-header">The Brothers Grimm</h1>
+		<ul class="nav">
 				<li>
 					<a href="../index.html">Home</a>
 				</li>
@@ -28,23 +28,29 @@
 						</ul>
 				</li>
 				<li>
-					<a href="../Grimm/titlepage.html">Sherlock Holmes</a>
+					<a class="active" href="../Grimm/titlepage.html">The Brothers Grimm</a>
 						<ul>
 							<li><a href="../Grimm/chapterone.html">Chapter One</a></li>
 							<li><a href="../Grimm/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="../Grimm/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				<li>
-					<a href="../Sherlock/titlepage.html">The Brothers Grimm</a>
+					<a href="../Sherlock/titlepage.html">Sherlock Holmes</a>
 						<ul>
 							<li><a href="../Sherlock/chapterone.html">Chapter One</a></li>
 							<li><a href="../Sherlock/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="../Sherlock/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				</li>
-				<li>
+				<li class="about-menu">
 					<a href="../about.html">About</a>
 				</li>
 		</ul>
+		</ul>
+			<h2 class="page-title">Title</h2>
+		</ul>
+		
+		<p></p>
+
 	</body>
 </html>
