--- a/chandler/about.html
+++ b/chandler/about.html
@@ -29,14 +29,14 @@
 						</ul>
 				</li>
 				<li>
-					<a href="Grimm/titlepage.html">Sherlock Holmes</a>
+					<a href="Grimm/titlepage.html">The Brothers Grimm</a>
 						<ul>
 							<li><a href="Grimm/chapterone.html">Chapter One</a></li>
 							<li><a href="Grimm/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="Grimm/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				<li>
-					<a href="Sherlock/titlepage.html">The Brothers Grimm</a>
+					<a href="Sherlock/titlepage.html">Sherlock Holmes</a>
 						<ul>
 							<li><a href="Sherlock/chapterone.html">Chapter One</a></li>
 							<li><a href="Sherlock/chaptertwo.html">Chapter Two</a></li>
