--- a/chandler/index.html
+++ b/chandler/index.html
@@ -6,10 +6,10 @@
 	<title>Book Project Home</title>
 </head>
 	<body>
-		<h1>Index</h1>
-		<ul id="nav">
+		<h1 class="main-header">Index</h1>
+		<ul class="nav">
 				<li>
-					<a href="index.html">Home</a>
+					<a class="active" href="index.html">Home</a>
 				</li>
 				<li>
 					<a href="Alice/titlepage.html">Alice in Wonderland</a>
@@ -28,23 +28,29 @@
 						</ul>
 				</li>
 				<li>
-					<a href="Grimm/titlepage.html">Sherlock Holmes</a>
+					<a href="Grimm/titlepage.html">The Brothers Grimm</a>
 						<ul>
 							<li><a href="Grimm/chapterone.html">Chapter One</a></li>
 							<li><a href="Grimm/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="Grimm/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				<li>
-					<a href="Sherlock/titlepage.html">The Brothers Grimm</a>
+					<a href="Sherlock/titlepage.html">Sherlock Holmes</a>
 						<ul>
 							<li><a href="Sherlock/chapterone.html">Chapter One</a></li>
 							<li><a href="Sherlock/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="Sherlock/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				</li>
-				<li>
+				<li class="about-menu">
 					<a href="about.html">About</a>
 				</li>
 		</ul>
+
+
+
+
+
+
 	</body>
 </html>
