--- a/chandler/Alice/titlepage.html
+++ b/chandler/Alice/titlepage.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="../style.css">
 </head>
 	<body>
-		<h1>Title Page</h1>	
-		<ul id="nav">
+		<h1 class="main-header">Alice in Wonderland</h1>	
+		<ul class="nav">
 				<li>
 					<a href="../index.html">Home</a>
 				</li>
 				<li>
-					<a href="../Alice/titlepage.html">Alice in Wonderland</a>
+					<a class="active" href="../Alice/titlepage.html">Alice in Wonderland</a>
 						<ul>
 							<li><a href="../Alice/chapterone.html">Chapter One</a></li>
 							<li><a href="../Alice/chaptertwo.html">Chapter Two</a></li>
@@ -28,23 +28,29 @@
 						</ul>
 				</li>
 				<li>
-					<a href="../Grimm/titlepage.html">Sherlock Holmes</a>
+					<a href="../Grimm/titlepage.html">The Brothers Grimm</a>
 						<ul>
 							<li><a href="../Grimm/chapterone.html">Chapter One</a></li>
 							<li><a href="../Grimm/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="../Grimm/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				<li>
-					<a href="../Sherlock/titlepage.html">The Brothers Grimm</a>
+					<a href="../Sherlock/titlepage.html">Sherlock Holmes</a>
 						<ul>
 							<li><a href="../Sherlock/chapterone.html">Chapter One</a></li>
 							<li><a href="../Sherlock/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="../Sherlock/chapterthree.html">Chapter Three</a></li>
 						</ul>
 				</li>
-				<li>
+				<li class="about-menu">
 					<a href="../about.html">About</a>
 				</li>
 		</ul>
+		</ul>
+			<h2 class="page-title">Title</h2>
+		</ul>
+		
+		<p></p>
+
 	</body>
 </html>
