--- a/chandler/Dracula/titlepage.html
+++ b/chandler/Dracula/titlepage.html
@@ -49,8 +49,52 @@
 		</ul>
 			<h2 class="page-title">Title</h2>
 		</ul>
-		
-		<p></p>
+				</p>	
+		<p class="titlepage">
+                                DRACULA
+		</p>	
+		<p class="titlepage">
+                                  _by_
+		</p>	
+		<p class="titlepage">
+                              Bram Stoker
+		</p>	
+		<p class="titlepage">
+                        [Illustration: colophon]
+		</p>	
+		<p class="titlepage">
+                                NEW YORK
+		</p>	
+		<p class="titlepage">
+                            GROSSET & DUNLAP
+		</p>	
+		<p class="titlepage">
+                              _Publishers_
+		</p>	
+		<p class="titlepage">
+      Copyright, 1897, in the United States of America, according
+                		</p>	
+		<p class="titlepage">
+                   to Act of Congress, by Bram Stoker
+		</p>	
+		<p class="titlepage">
+                        [_All rights reserved._]
+		</p>	
+		<p class="titlepage">
+                      PRINTED IN THE UNITED STATES
+                             		</p>	
+		<p class="titlepage">      AT
+               THE COUNTRY LIFE PRESS, GARDEN CITY, N.Y.
+		</p>	
+		<p class="titlepage">
 
+                                   TO
+		</p>	
+		<p class="titlepage">
+                             MY DEAR FRIEND
+		</p>	
+		<p class="titlepage">
+                               HOMMY-BEG
+		</p>	
 	</body>
 </html>
