--- a/chandler/Sherlock/titlepage.html
+++ b/chandler/Sherlock/titlepage.html
@@ -34,6 +34,7 @@
 							<li><a href="../Grimm/chaptertwo.html">Chapter Two</a></li>
 							<li><a href="../Grimm/chapterthree.html">Chapter Three</a></li>
 						</ul>
+				</li>		
 				<li>
 					<a class="active" href="../Sherlock/titlepage.html">Sherlock Holmes</a>
 						<ul>
@@ -45,12 +46,52 @@
 				<li class="about-menu">
 					<a href="../about.html">About</a>
 				</li>
+			</ul>
+				<h2 class="page-title">The Adventures of Sherlock Holmes</h2>
+			</ul>
 		</ul>
-		</ul>
-			<h2 class="page-title">Title</h2>
-		</ul>
-		
-		<p></p>
+		<p class="titlepage">
+			by
+		</p>	
+		<p class="titlepage">			
+			<em>SIR ARTHUR CONAN DOYLE</em>
+		</p>	
+		<p class="titlepage">			
+			I. A Scandal in Bohemia
+		</p>	
+		<p class="titlepage">			
+			II. The Red-headed League
+		</p>	
+		<p class="titlepage">			
+			III. A Case of Identity
+		</p>	
+		<p class="titlepage">			
+			IV. The Boscombe Valley Mystery
+		</p>	
+		<p class="titlepage">			
+			V. The Five Orange Pips
+		</p>	
+		<p class="titlepage">			
+			VI. The Man with the Twisted Lip
+		</p>	
+		<p class="titlepage">			
+			VII. The Adventure of the Blue Carbuncle
+		</p>	
+		<p class="titlepage">			
+			VIII. The Adventure of the Speckled Band
+		</p>	
+		<p class="titlepage">			
+			IX. The Adventure of the Engineer's Thumb
+		</p>	
+		<p class="titlepage">			
+			X. The Adventure of the Noble Bachelor
+		</p>	
+		<p class="titlepage">			
+			XI. The Adventure of the Beryl Coronet
+		</p>	
+		<p class="titlepage">			
+			XII. The Adventure of the Copper Beeches
+		</p>
 
 	</body>
 </html>
