--- a/chandler/Grimm/titlepage.html
+++ b/chandler/Grimm/titlepage.html
@@ -49,8 +49,39 @@
 		</ul>
 			<h2 class="page-title">Title</h2>
 		</ul>
-		
-		<p></p>
+		<p class="titlepage">
+			Title: Grimm's Fairy Stories
+		</p>	
+		<p class="titlepage">
+			Author: Jacob Grimm and Wilhelm Grimm
+		</p>	
+		<p class="titlepage">
+			Release Date: February 10, 2004  [eBook #11027]
+		</p>	
+		<p class="titlepage">
+			Language: English
+		</p>	
+		<p class="titlepage">
 
+			***START OF THE PROJECT GUTENBERG EBOOK GRIMM'S FAIRY STORIES***
+		</p>	
+		<p class="titlepage">
+
+			E-text prepared by Internet Archive, University of Florida, Children, and
+			the Project Gutenberg Online Distributed Proofreading Team
+		</p>	
+		<p class="titlepage">
+			GRIMM'S FAIRY STORIES
+		</p>	
+		<p class="titlepage">
+			Colored Illustrations by JOHN B. GRUELLE
+		</p>	
+		<p class="titlepage">
+			Pen and Ink Sketches by R. EMMETT OWEN
+		</p>	
+		<p class="titlepage">
+			1922
+		</p>
+		
 	</body>
 </html>
