--- a/scott/HW2/Five Little Peppers At School/index.html
+++ b/scott/HW2/Five Little Peppers At School/index.html
@@ -5,13 +5,13 @@
 	<title>Five Little Peppers At School</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="index">
 
 
-<h1 class="book-title">Five Little Peppers At School by Margaret Sidney</h1>
+<h1 class="book-title">Five Little Peppers At School <br>by Margaret Sidney</h1>
 
 <p>
-<img class="cover-image" src="CoverImage.jpg" title="Look at those little kids!" alt="Five Little Peppers At School" align="left">
+<img class="cover-image" src="CoverImage.jpg" title="Look at those little kids!" alt="Five Little Peppers At School">
 </p>
 
 <h2>Table Of Contents</h2>
