Imbed Font Body and Added Title Images

--- a/chandler/Alice/titlepage.html
+++ b/chandler/Alice/titlepage.html
@@ -46,14 +46,18 @@
 					<a href="../about.html">About</a>
 				</li>
 		</ul>
-		</ul>
-			<h2 class="page-title">Alice in Wonderland</h2>
-		</ul>	
+			<ul>
+				<h2 class="page-title">ALICE IN WONDERLAND</h2>
+			</ul>	
+        <ul>
+        	<li>
+        		<img src="https://www.penguin.com.au/jpg-large/9780141361345.jpg" img class="titlepageimage">
+        	</li>
+		</ul>		
 		<p class="titlepage">
           ALICE'S·ADVENTURES
         </p>	
-        <p><img src="https://www.penguin.com.au/jpg-large/9780141361345.jpg"></p>
-		<p class="titlepage" class="titlepageimage">
+		<p class="titlepage">
           IN·WONDERLAND
 		</p>	
 		<p class="titlepage">
