--- a/chandler/Dracula/titlepage.html
+++ b/chandler/Dracula/titlepage.html
@@ -46,15 +46,16 @@
 					<a href="../about.html">About</a>
 				</li>
 		</ul>
+			<ul>
+				<h2 class="page-title">DRACULA</h2>
+			</ul>	
+        <ul>
+        	<li>
+        		<img src="https://boofsbooks.files.wordpress.com/2010/10/dracula-cover.jpg" img class="titlepageimage">
+        	</li>
 		</ul>
-			<h2 class="page-title">Title</h2>
-		</ul>
-				</p>	
 		<p class="titlepage">
-                                DRACULA
-		</p>	
-		<p class="titlepage">
-                                  _by_
+                                  by
 		</p>	
 		<p class="titlepage">
                               Bram Stoker
@@ -69,7 +70,7 @@
                             GROSSET & DUNLAP
 		</p>	
 		<p class="titlepage">
-                              _Publishers_
+                              Publishers
 		</p>	
 		<p class="titlepage">
       Copyright, 1897, in the United States of America, according
@@ -78,23 +79,13 @@
                    to Act of Congress, by Bram Stoker
 		</p>	
 		<p class="titlepage">
-                        [_All rights reserved._]
+                        [All rights reserved]
 		</p>	
 		<p class="titlepage">
                       PRINTED IN THE UNITED STATES
-                             		</p>	
+        </p>	
 		<p class="titlepage">      AT
                THE COUNTRY LIFE PRESS, GARDEN CITY, N.Y.
-		</p>	
-		<p class="titlepage">
-
-                                   TO
-		</p>	
-		<p class="titlepage">
-                             MY DEAR FRIEND
-		</p>	
-		<p class="titlepage">
-                               HOMMY-BEG
 		</p>	
 	</body>
 </html>
