--- a/chandler/Grimm/titlepage.html
+++ b/chandler/Grimm/titlepage.html
@@ -46,12 +46,14 @@
 					<a href="../about.html">About</a>
 				</li>
 		</ul>
+			<ul>
+				<h2 class="page-title">GRIMM'S FAIRY STORIES</h2>
+			</ul>	
+        <ul>
+        	<li>
+        		<img src="http://40.media.tumblr.com/tumblr_lzxbkdHctp1qksd2oo1_1280.jpg" img class="titlepageimage">
+        	</li>
 		</ul>
-			<h2 class="page-title">Title</h2>
-		</ul>
-		<p class="titlepage">
-			Title: Grimm's Fairy Stories
-		</p>	
 		<p class="titlepage">
 			Author: Jacob Grimm and Wilhelm Grimm
 		</p>	
