--- a/chandler/Sherlock/titlepage.html
+++ b/chandler/Sherlock/titlepage.html
@@ -47,8 +47,13 @@
 					<a href="../about.html">About</a>
 				</li>
 			</ul>
-				<h2 class="page-title">The Adventures of Sherlock Holmes</h2>
-			</ul>
+			<ul>
+				<h2 class="page-title">THE ADVENTURES OF SHERLOCK HOLMES</h2>
+			</ul>	
+        <ul>
+        	<li>
+        		<img src="https://www.penguin.com.au/jpg-large/9780141040288.jpg" img class="titlepageimage">
+        	</li>
 		</ul>
 		<p class="titlepage">
 			by
