Fade in and Fade out

--- a/chandler/Alice/titlepage.html
+++ b/chandler/Alice/titlepage.html
@@ -51,7 +51,7 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="https://www.penguin.com.au/jpg-large/9780141361345.jpg" img class="titlepageimage">
+        		<img src="../References/Alice.jpg" img class="titlepageimage">
         	</li>
 		</ul>		
 		<p class="titlepage">
