--- a/chandler/Dracula/titlepage.html
+++ b/chandler/Dracula/titlepage.html
@@ -51,7 +51,7 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="https://boofsbooks.files.wordpress.com/2010/10/dracula-cover.jpg" img class="titlepageimage">
+        		<img src="../References/Dracula.jpg" img class="titlepageimage">
         	</li>
 		</ul>
 		<p class="titlepage">
