--- a/chandler/Grimm/titlepage.html
+++ b/chandler/Grimm/titlepage.html
@@ -51,7 +51,7 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="http://40.media.tumblr.com/tumblr_lzxbkdHctp1qksd2oo1_1280.jpg" img class="titlepageimage">
+        		<img src="../References/Grimm.jpg" img class="titlepageimage">
         	</li>
 		</ul>
 		<p class="titlepage">
