--- a/chandler/Sherlock/titlepage.html
+++ b/chandler/Sherlock/titlepage.html
@@ -52,7 +52,7 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="https://www.penguin.com.au/jpg-large/9780141040288.jpg" img class="titlepageimage">
+        		<img src="../References/Sherlock.jpg" img class="titlepageimage">
         	</li>
 		</ul>
 		<p class="titlepage">
