Added Index content and Z Position to sub menus

--- a/chandler/Alice/titlepage.html
+++ b/chandler/Alice/titlepage.html
@@ -54,31 +54,31 @@
         		<img src="../References/Alice.jpg" img class="titlepageimage">
         	</li>
 		</ul>		
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           ALICE'S·ADVENTURES
         </p>	
-		<p class="titlepage">
+		<p class="titlepagefadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           IN·WONDERLAND
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           BY·LEWIS·CARROLL
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           ILLUSTRATED·BY
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           ARTHUR·RACKHAM
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           WITH A PROEM BY AUSTIN DOBSON
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           LONDON·WILLIAM·HEINEMANN
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           NEW·YORK·DOUBLEDAY·PAGE·&·Co]
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
           PRINTED IN ENGLAND
 		</p>	
 	</body>
