--- a/chandler/Grimm/titlepage.html
+++ b/chandler/Grimm/titlepage.html
@@ -54,34 +54,34 @@
         		<img src="../References/Grimm.jpg" img class="titlepageimage">
         	</li>
 		</ul>
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			Author: Jacob Grimm and Wilhelm Grimm
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			Release Date: February 10, 2004  [eBook #11027]
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			Language: English
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 
 			***START OF THE PROJECT GUTENBERG EBOOK GRIMM'S FAIRY STORIES***
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 
 			E-text prepared by Internet Archive, University of Florida, Children, and
 			the Project Gutenberg Online Distributed Proofreading Team
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			GRIMM'S FAIRY STORIES
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			Colored Illustrations by JOHN B. GRUELLE
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			Pen and Ink Sketches by R. EMMETT OWEN
 		</p>	
-		<p class="titlepage">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
 			1922
 		</p>
 		
