--- a/chandler/index.html
+++ b/chandler/index.html
@@ -45,12 +45,20 @@
 				<li class="about-menu">
 					<a href="about.html">About</a>
 				</li>
-		</ul>
-
-
-
-
-
-
+		</ul></li></ul>
+	<ol class="centeredelements">
+		<li>
+			<a href="Alice/titlepage.html"><img src="References/Alice.jpg"<img class="listimage">
+		</li></a>
+		<li>
+			<a href="Dracula/titlepage.html"><img src="References/Dracula.jpg"<img class="listimage">
+		</li></a>
+		<li>
+			<a href="Grimm/titlepage.html"><img src="References/Grimm.jpg"<img class="listimage">
+		</li></a>
+		<li>
+			<a href="Sherlock/titlepage.html"><img src="References/Sherlock.jpg"<img class="listimage"></a>
+		</li>
+	</ol>
 	</body>
 </html>
