--- a/chandler/Dracula/titlepage.html
+++ b/chandler/Dracula/titlepage.html
@@ -51,40 +51,40 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="../References/Dracula.jpg" img class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraphimage">
+        		<img src="../References/Dracula.jpg" img class="titlepageimage fadeIn fadeIn-3s fadeIn-Delay-3s">
         	</li>
 		</ul>
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                                   by
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                               Bram Stoker
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                         [Illustration: colophon]
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                                 NEW YORK
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                             GROSSET & DUNLAP
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                               Publishers
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
       Copyright, 1897, in the United States of America, according
                 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                    to Act of Congress, by Bram Stoker
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                         [All rights reserved]
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
                       PRINTED IN THE UNITED STATES
         </p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">      AT
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">      AT
                THE COUNTRY LIFE PRESS, GARDEN CITY, N.Y.
 		</p>	
 	</body>
