--- a/chandler/Sherlock/titlepage.html
+++ b/chandler/Sherlock/titlepage.html
@@ -52,49 +52,49 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="../References/Sherlock.jpg" img class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraphimage">
+        		<img src="../References/Sherlock.jpg" img class="titlepageimage fadeIn fadeIn-3s fadeIn-Delay-3s">
         	</li>
 		</ul>
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">
 			by
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			<em>SIR ARTHUR CONAN DOYLE</em>
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			I. A Scandal in Bohemia
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			II. The Red-headed League
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			III. A Case of Identity
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			IV. The Boscombe Valley Mystery
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			V. The Five Orange Pips
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			VI. The Man with the Twisted Lip
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			VII. The Adventure of the Blue Carbuncle
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			VIII. The Adventure of the Speckled Band
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			IX. The Adventure of the Engineer's Thumb
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			X. The Adventure of the Noble Bachelor
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			XI. The Adventure of the Beryl Coronet
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">			
+		<p class="titlepage  fadeIn fadeIn-3s fadeIn-Delay-3s">			
 			XII. The Adventure of the Copper Beeches
 		</p>
 
