--- a/chandler/Alice/titlepage.html
+++ b/chandler/Alice/titlepage.html
@@ -51,34 +51,34 @@
 			</ul>	
         <ul>
         	<li>
-        		<img src="../References/Alice.jpg" img class="titlepageimage">
+        		<img src="../References/Alice.jpg" img class="titlepageimage fadeIn fadeIn-3s fadeIn-Delay-3s">
         	</li>
 		</ul>		
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           ALICE'S·ADVENTURES
         </p>	
-		<p class="titlepagefadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           IN·WONDERLAND
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           BY·LEWIS·CARROLL
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           ILLUSTRATED·BY
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           ARTHUR·RACKHAM
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           WITH A PROEM BY AUSTIN DOBSON
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           LONDON·WILLIAM·HEINEMANN
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           NEW·YORK·DOUBLEDAY·PAGE·&·Co]
 		</p>	
-		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s first-paragraph">
+		<p class="titlepage fadeIn fadeIn-3s fadeIn-Delay-3s">
           PRINTED IN ENGLAND
 		</p>	
 	</body>
