finish styling for homework 2

--- a/robert/hw2/index.html
+++ b/robert/hw2/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+	<link rel="stylesheet" href="style.css">
 	<title>The Adventures of Sherlock Holmes</title>
 </head>
 <body>
-	<div class="book">
-	<h1>The Adventures of Sherlock Holmes</h1>
-	<h3>by</h3>
-	<h2>Sir Arthur Conan Doyle</h2>
+	<header>
+		<h1>The Adventures of Sherlock Holmes</h1>
+		<h2>Sir Arthur Conan Doyle</h2>
+	</header>
 	<h2>Contents</h2>
 	<ul class="toc">
 		<li><a href="adventure1.html">A Scandal in Bohemia</a></li>
@@ -24,6 +26,5 @@
 		<li><a href="adventure11.html">The Adventure of the Beryl Coronet</a></li>
 		<li><a href="adventure12.html">The Adventure of the Copper Beeches</a></li>
 	</ul>
-	</div>
 </body>
 </html>
