--- a/kayden/Style Homework/index.html
+++ b/kayden/Style Homework/index.html
@@ -41,6 +41,7 @@
 
 .aside-1 {
   background: gold;
+  text-align: center;
 }
 
 .aside-2 {
@@ -74,13 +75,20 @@ body {
   <header class="header">Welcome to Your Nightmare</header>
   
   <article class="main">
-    <p>This is not original. I copied and pasted. I am a cheater and thief.</p>  
+    <p>This is not original. I copied and pasted. I am a cheater and thief. However, this is the best place for things.</p>  
   </article>
   
-  <aside class="aside aside-1">Menu Choice</aside>
+  <aside class="aside aside-1">
+  Menu Choice
+  <ul style="list-style: none">
+    <li>Chicken</li>
+    <li>Beef</li>
+    <li>Human</li>
+  </ul>
+  </aside>
   <aside class="aside aside-2">Menu Choice</aside>
   
-  <footer class="footer">Footer</footer>
+  <footer class="footer">Food may contain GMO or posoin</footer>
 
 </div>
 
