more colors to type backgrounds

--- a/scott/HW4/index.html
+++ b/scott/HW4/index.html
@@ -9,8 +9,8 @@
 <header>
 	<div class="groupsort">
 		<select class="sort-options">
+			<option value="Id">By Id</option>
 		    <option value="Name">By Name</option>
-		    <option value="Id">By Id</option>
 		</select>
 		<select class="group-options">
 		    <option value="">No Grouping</option>
@@ -19,7 +19,7 @@
 		</select>
 	</div>
 	<div class="search">
-	    <input type="text" placeholder="search">
+	    <input type="text" placeholder="search" value="" class="search-input">
 	</div>
 </header>
 <div class="pokeclass">
